--- a/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
+++ b/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
@@ -57,12 +57,14 @@ h1 {
     align-items: center;
     gap: 4px;
     position: absolute;
-    top: 0;
-    right: 50%;
-    background-color: rgba(17, 244, 17, 0.15);
-    transform: translateX(50%);
+    top: 50%;
+    left: 50%;
+    background-color: rgba(149, 245, 53, 0.235);
+    backdrop-filter: brightness(180%);
+    transform: translate(-50%, -50%);
     border-radius: 5px;
-    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+    z-index: 100;
+    box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
 
     & span {
         font-size: 18px;
@@ -78,4 +80,14 @@ h1 {
         background-image: url('../../../../assets/images/green-tick.png');
         background-size: cover;
     }
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(116, 113, 113, 0.6);
 }
